# xau-ppo-lstm-engine

./: .dockerignore  .gitignore  Dockerfile  PROJECT_MEM.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: bootstrap_data.py  check_timezone.py  clean_mt5_data.py
data/processed/: test_features_15m.csv
environment/: trading_env.py
features/: build_pivots.py  build_zones.py  main_processor.py  test_stationarity.py
models/: advanced_forward_journal.csv  lstm_ppo.py  test_agent.py  test_integration.py  vec_normalize_london.pkl
